--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "engines":{
+  "engines": {
     "node": "20.10.0"
   },
   "name": "majorproject",
@@ -25,6 +25,7 @@
     "express-session": "^1.18.0",
     "joi": "^17.12.1",
     "method-override": "^3.0.0",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
